/*
 * Copyright (c) 2026.  Roland T. Lichti <rlichti@kaiserpfalz-edv.de>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * ERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 *
 * You may contact me via email rlichti@kaiserpfalz-edv.de or via mail
 *
 * Kaiserpfalz EDV-Service
 * Roland T. Lichti
 * Darmstädter Str. 12
 * 64625 Bensheim
 * GERMANY
 */

package de.paladinsinn.torg.codex.application.port.out;

import de.paladinsinn.torg.codex.domain.model.CatalogProduct;

import java.util.Optional;

/**
 * Driven (outbound) port for retrieving DriveThruRPG product information using
 * framework-independent domain types. Adapters implement this against the concrete
 * DriveThruRPG HTTP client.
 */
public interface DriveThruRpgProductPort {

    /**
     * Retrieves a single product by its DriveThruRPG product id.
     *
     * @param productId the DriveThruRPG product id
     * @return the product, or {@link Optional#empty()} if it does not exist
     */
    Optional<CatalogProduct> findProduct(String productId);
}
